@@ -5,6 +5,10 @@
 	binary/ascii descriptions of color and polygons passed by the x11
 	driver to gnuplot_x11.   Patchset #1549408
 
+2006-10-08  Daniel Sebald  <daniel.sebald@ieee.org>
+
+	* src/term.c term/driver.h: Remove dead code and comments
+
 2006-10-08  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>
 
 	* docs/gnuplot.doc (set key): Fix gotcha in list of alignment 
